go/gen/ssql_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package gen // SSQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SSQLParser struct {
	*antlr.BaseParser
}

var ssqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func ssqlParserInit() {
	staticData := &ssqlParserStaticData
	staticData.literalNames = []string{
		"", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", "'{&'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "AVG", "MAX", "MIN", "SUM", "COUNT",
		"PERCENTILE", "PARTITION", "EQ", "NEQ", "IN", "LT", "LE", "GE", "GT",
		"BETWEEN", "CONTAIN", "EXIST", "ISNULL", "TRUE", "FALSE", "FIND", "FROM",
		"WHERE", "ORDER_BY", "GROUP_BY", "LIMIT", "ASC", "DESC", "LOCAL", "NAME",
		"PATH", "STRING", "INTEGER", "REAL_NUMBER", "ISO8601_DATE_TIME", "SIGN",
		"IDENTIFIER", "WS",
	}
	staticData.ruleNames = []string{
		"start", "selection", "attribute", "aggregate", "percentile", "groupBy",
		"partition", "from", "expression", "tuple", "vector", "or", "and", "predicate",
		"eq", "neq", "gt", "ge", "lt", "le", "in", "between", "contain", "exist",
		"isnull", "boolean", "scalar", "list", "stringList", "doubleList", "intList",
		"orderBy", "order", "limit",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SSQLParserInit initializes any static state used to implement SSQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SSQLParserInit() {
	staticData := &ssqlParserStaticData
	staticData.once.Do(ssqlParserInit)
}

// NewSSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSSQLParser(input antlr.TokenStream) *SSQLParser {
	SSQLParserInit()
	this := new(SSQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ssqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// SSQLParser tokens.
const (
	SSQLParserEOF               = antlr.TokenEOF
	SSQLParserT__0              = 1
	SSQLParserT__1              = 2
	SSQLParserT__2              = 3
	SSQLParserT__3              = 4
	SSQLParserT__4              = 5
	SSQLParserT__5              = 6
	SSQLParserT__6              = 7
	SSQLParserT__7              = 8
	SSQLParserAVG               = 9
	SSQLParserMAX               = 10
	SSQLParserMIN               = 11
	SSQLParserSUM               = 12
	SSQLParserCOUNT             = 13
	SSQLParserPERCENTILE        = 14
	SSQLParserPARTITION         = 15
	SSQLParserEQ                = 16
	SSQLParserNEQ               = 17
	SSQLParserIN                = 18
	SSQLParserLT                = 19
	SSQLParserLE                = 20
	SSQLParserGE                = 21
	SSQLParserGT                = 22
	SSQLParserBETWEEN           = 23
	SSQLParserCONTAIN           = 24
	SSQLParserEXIST             = 25
	SSQLParserISNULL            = 26
	SSQLParserTRUE              = 27
	SSQLParserFALSE             = 28
	SSQLParserFIND              = 29
	SSQLParserFROM              = 30
	SSQLParserWHERE             = 31
	SSQLParserORDER_BY          = 32
	SSQLParserGROUP_BY          = 33
	SSQLParserLIMIT             = 34
	SSQLParserASC               = 35
	SSQLParserDESC              = 36
	SSQLParserLOCAL             = 37
	SSQLParserNAME              = 38
	SSQLParserPATH              = 39
	SSQLParserSTRING            = 40
	SSQLParserINTEGER           = 41
	SSQLParserREAL_NUMBER       = 42
	SSQLParserISO8601_DATE_TIME = 43
	SSQLParserSIGN              = 44
	SSQLParserIDENTIFIER        = 45
	SSQLParserWS                = 46
)

// SSQLParser rules.
const (
	SSQLParserRULE_start      = 0
	SSQLParserRULE_selection  = 1
	SSQLParserRULE_attribute  = 2
	SSQLParserRULE_aggregate  = 3
	SSQLParserRULE_percentile = 4
	SSQLParserRULE_groupBy    = 5
	SSQLParserRULE_partition  = 6
	SSQLParserRULE_from       = 7
	SSQLParserRULE_expression = 8
	SSQLParserRULE_tuple      = 9
	SSQLParserRULE_vector     = 10
	SSQLParserRULE_or         = 11
	SSQLParserRULE_and        = 12
	SSQLParserRULE_predicate  = 13
	SSQLParserRULE_eq         = 14
	SSQLParserRULE_neq        = 15
	SSQLParserRULE_gt         = 16
	SSQLParserRULE_ge         = 17
	SSQLParserRULE_lt         = 18
	SSQLParserRULE_le         = 19
	SSQLParserRULE_in         = 20
	SSQLParserRULE_between    = 21
	SSQLParserRULE_contain    = 22
	SSQLParserRULE_exist      = 23
	SSQLParserRULE_isnull     = 24
	SSQLParserRULE_boolean    = 25
	SSQLParserRULE_scalar     = 26
	SSQLParserRULE_list       = 27
	SSQLParserRULE_stringList = 28
	SSQLParserRULE_doubleList = 29
	SSQLParserRULE_intList    = 30
	SSQLParserRULE_orderBy    = 31
	SSQLParserRULE_order      = 32
	SSQLParserRULE_limit      = 33
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) FIND() antlr.TerminalNode {
	return s.GetToken(SSQLParserFIND, 0)
}

func (s *StartContext) Selection() ISelectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectionContext)
}

func (s *StartContext) WHERE() antlr.TerminalNode {
	return s.GetToken(SSQLParserWHERE, 0)
}

func (s *StartContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(SSQLParserEOF, 0)
}

func (s *StartContext) FROM() antlr.TerminalNode {
	return s.GetToken(SSQLParserFROM, 0)
}

func (s *StartContext) From() IFromContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFromContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFromContext)
}

func (s *StartContext) OrderBy() IOrderByContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOrderByContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOrderByContext)
}

func (s *StartContext) Limit() ILimitContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILimitContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILimitContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Start() (localctx IStartContext) {
	this := p
	_ = this

	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SSQLParserRULE_start)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(SSQLParserFIND)
	}
	{
		p.SetState(69)
		p.Selection()
	}
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SSQLParserFROM {
		{
			p.SetState(70)
			p.Match(SSQLParserFROM)
		}
		{
			p.SetState(71)
			p.From()
		}

	}
	{
		p.SetState(74)
		p.Match(SSQLParserWHERE)
	}
	{
		p.SetState(75)
		p.Expression()
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SSQLParserORDER_BY {
		{
			p.SetState(76)
			p.OrderBy()
		}

	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SSQLParserLIMIT {
		{
			p.SetState(79)
			p.Limit()
		}

	}
	{
		p.SetState(82)
		p.Match(SSQLParserEOF)
	}

	return localctx
}

// ISelectionContext is an interface to support dynamic dispatch.
type ISelectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectionContext differentiates from other interfaces.
	IsSelectionContext()
}

type SelectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectionContext() *SelectionContext {
	var p = new(SelectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_selection
	return p
}

func (*SelectionContext) IsSelectionContext() {}

func NewSelectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectionContext {
	var p = new(SelectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_selection

	return p
}

func (s *SelectionContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectionContext) AllAttribute() []IAttributeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAttributeContext); ok {
			len++
		}
	}

	tst := make([]IAttributeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAttributeContext); ok {
			tst[i] = t.(IAttributeContext)
			i++
		}
	}

	return tst
}

func (s *SelectionContext) Attribute(i int) IAttributeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttributeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttributeContext)
}

func (s *SelectionContext) GROUP_BY() antlr.TerminalNode {
	return s.GetToken(SSQLParserGROUP_BY, 0)
}

func (s *SelectionContext) AllGroupBy() []IGroupByContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IGroupByContext); ok {
			len++
		}
	}

	tst := make([]IGroupByContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IGroupByContext); ok {
			tst[i] = t.(IGroupByContext)
			i++
		}
	}

	return tst
}

func (s *SelectionContext) GroupBy(i int) IGroupByContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupByContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupByContext)
}

func (s *SelectionContext) AllAggregate() []IAggregateContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAggregateContext); ok {
			len++
		}
	}

	tst := make([]IAggregateContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAggregateContext); ok {
			tst[i] = t.(IAggregateContext)
			i++
		}
	}

	return tst
}

func (s *SelectionContext) Aggregate(i int) IAggregateContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAggregateContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAggregateContext)
}

func (s *SelectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterSelection(s)
	}
}

func (s *SelectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitSelection(s)
	}
}

func (s *SelectionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitSelection(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Selection() (localctx ISelectionContext) {
	this := p
	_ = this

	localctx = NewSelectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SSQLParserRULE_selection)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(110)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT, SSQLParserPERCENTILE, SSQLParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(84)
			p.Attribute()
		}
		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(85)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(86)
				p.Attribute()
			}

			p.SetState(91)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	case SSQLParserGROUP_BY:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(92)
			p.Match(SSQLParserGROUP_BY)
		}
		{
			p.SetState(93)
			p.Match(SSQLParserT__1)
		}
		{
			p.SetState(94)
			p.GroupBy()
		}
		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(95)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(96)
				p.GroupBy()
			}

			p.SetState(101)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(102)
			p.Match(SSQLParserT__2)
		}
		p.SetState(107)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SSQLParserT__0 {
			{
				p.SetState(103)
				p.Match(SSQLParserT__0)
			}
			{
				p.SetState(104)
				p.Aggregate()
			}

			p.SetState(109)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAttributeContext is an interface to support dynamic dispatch.
type IAttributeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAttributeContext differentiates from other interfaces.
	IsAttributeContext()
}

type AttributeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttributeContext() *AttributeContext {
	var p = new(AttributeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_attribute
	return p
}

func (*AttributeContext) IsAttributeContext() {}

func NewAttributeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AttributeContext {
	var p = new(AttributeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_attribute

	return p
}

func (s *AttributeContext) GetParser() antlr.Parser { return s.parser }

func (s *AttributeContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SSQLParserIDENTIFIER, 0)
}

func (s *AttributeContext) Aggregate() IAggregateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAggregateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAggregateContext)
}

func (s *AttributeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AttributeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AttributeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterAttribute(s)
	}
}

func (s *AttributeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitAttribute(s)
	}
}

func (s *AttributeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitAttribute(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Attribute() (localctx IAttributeContext) {
	this := p
	_ = this

	localctx = NewAttributeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SSQLParserRULE_attribute)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(114)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(112)
			p.Match(SSQLParserIDENTIFIER)
		}

	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT, SSQLParserPERCENTILE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(113)
			p.Aggregate()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAggregateContext is an interface to support dynamic dispatch.
type IAggregateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAggregateContext differentiates from other interfaces.
	IsAggregateContext()
}

type AggregateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAggregateContext() *AggregateContext {
	var p = new(AggregateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SSQLParserRULE_aggregate
	return p
}

func (*AggregateContext) IsAggregateContext() {}

func NewAggregateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AggregateContext {
	var p = new(AggregateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SSQLParserRULE_aggregate

	return p
}

func (s *AggregateContext) GetParser() antlr.Parser { return s.parser }

func (s *AggregateContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SSQLParserIDENTIFIER, 0)
}

func (s *AggregateContext) AVG() antlr.TerminalNode {
	return s.GetToken(SSQLParserAVG, 0)
}

func (s *AggregateContext) MAX() antlr.TerminalNode {
	return s.GetToken(SSQLParserMAX, 0)
}

func (s *AggregateContext) MIN() antlr.TerminalNode {
	return s.GetToken(SSQLParserMIN, 0)
}

func (s *AggregateContext) SUM() antlr.TerminalNode {
	return s.GetToken(SSQLParserSUM, 0)
}

func (s *AggregateContext) COUNT() antlr.TerminalNode {
	return s.GetToken(SSQLParserCOUNT, 0)
}

func (s *AggregateContext) Percentile() IPercentileContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPercentileContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPercentileContext)
}

func (s *AggregateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AggregateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AggregateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.EnterAggregate(s)
	}
}

func (s *AggregateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SSQLListener); ok {
		listenerT.ExitAggregate(s)
	}
}

func (s *AggregateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SSQLVisitor:
		return t.VisitAggregate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SSQLParser) Aggregate() (localctx IAggregateContext) {
	this := p
	_ = this

	localctx = NewAggregateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SSQLParserRULE_aggregate)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(121)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SSQLParserAVG, SSQLParserMAX, SSQLParserMIN, SSQLParserSUM, SSQLParserCOUNT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(116)
			_la = p.GetTokenStream().LA(1)
